# erp-mes-app

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  Dockerfile.frontend  FINAL_SUMMARY.md  FULLSTACK_README.md  IMPLEMENTATION_SUMMARY.md  START_HERE.md  docker-compose.prod.yml  docker-compose.yml  eslint.config.mjs  next.config.mjs  nginx.conf  package.json
app/: globals.css  (+2 more)
backend/: .env.example  .gitignore  CURL_EXAMPLES.md  Dockerfile  PROOFS.md  README.md  TEST_CURL.md  USE_CASES.md  VERDICT.md  alembic_bootstrap.py  create_migration.py  pyproject.toml  requirements.txt  run_migration.sh  seed_data.py  setup_production.py
backend/alembic/: env.py
backend/alembic/versions/: 001_add_must_change_password.py  001_initial_schema.py  002_specifications_api.py  003_allow_password_changed_audit_action.py  004_user_token_version_onboarding_audit_actions.py  005_refresh_sessions_rotation.py  006_user_must_change_password.py  006a_baseline_createall.py  (+4 more)
backend/app/: auth.py  celery_app.py  celery_worker.py  config.py  database.py  domain_errors.py  main.py  models.py  models_FULL.py  models_broken.py  problem_details.py  schemas.py  security.py
backend/tests/: test_auth_permissions.py  test_inventory_use_cases.py  test_movement_rules.py  test_movement_use_cases.py  test_movements_journey.py  test_part_use_cases.py  test_parts_pagination_contract.py  test_parts_related_use_case.py  test_problem_details.py  test_query_plan_regressions.py  test_spec_item_delete.py  test_task_use_cases.py  test_tasks_unread_pagination.py  test_uploads_filename_validation.py
(+121 files in other folders)
